# bitwise

./: .editorconfig  .gitignore  .travis.yml  ChangeLog  Makefile  Makefile.am  README  README.md  bitwise.1  bitwise.h  calc.c  cmd.c  configure.ac  interactive.c  main.c  misc.c  snapcraft.yaml  ubuntu_release.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-osx.yaml  c-cpp.yml
debian/: changelog  control  copyright  rules  watch
inc/: bitwise.h  compat.h  shunting-yard.h  stack.h
resources/: snip.txt
src/: cmd.c  compat.c  help.c  interactive.c  main.c  misc.c  shunting-yard.c  stack.c
tests/: test-shunting-yard.c
